Bug 160714 - dragging something on the pager does not activate the desktop
Summary: dragging something on the pager does not activate the desktop
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-04-11 16:36 UTC by S. Burmeister
Modified: 2008-06-04 21:39 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description S. Burmeister 2008-04-11 16:36:15 UTC
Version:            (using KDE 4.0.3)
Installed from:    SuSE RPMs
OS:                Linux

In order to be able to drag files from app a on desktop 1 into app b on desktop 2, it is neccessary that the pager activates the desktop the user drags something to.
Comment 1 Daniel Laidig 2008-06-04 21:39:00 UTC
SVN commit 816768 by laidig:

Switch the desktop on a drag event after a delay of one second. This makes it possible to 
drag and drop between applications on different desktop if the taskbar only shows windows 
from the current desktop.

BUG:160714



 M  +76 -13    pager.cpp  
 M  +11 -1     pager.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=816768