Switch the desktop on a drag event after a delay of one second. This makes it possible to drag and drop between applications on different desktop if the taskbar only shows windows from the current desktop.

BUG:160714


svn path=/trunk/KDE/kdebase/workspace/; revision=816768